# NeNEt

./: .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  build.bat  build_nenet.bat  vcpkg.json
assets/blocks/: atlas_index.json  atlas_index.txt
assets/shaders/: cube.frag  cube.vert  hotbar.vert  menu.vert  outline.vert  wallpaper.frag  wallpaper.vert
src/: main.cpp
src/core/: app.cpp  app.h  logger.h  window.cpp  window.h
src/io/: input.cpp  input.h  rpc_client.cpp  rpc_client.h  udp_client.cpp  udp_client.h  wallpaper.cpp  wallpaper.h
src/player/: aabb.cpp  aabb.h  fly_controller.cpp  fly_controller.h  player.cpp  player.h  raycaster.cpp  raycaster.h
src/render/: buffer.cpp  buffer.h  camera.cpp  camera.h  chunk_mesh.cpp  chunk_mesh.h  depth_image.cpp  depth_image.h  hotbar_pipeline.cpp  hotbar_pipeline.h  hud_pipeline.cpp  hud_pipeline.h  hud_renderer.cpp  hud_renderer.h  menu_pipeline.cpp  menu_pipeline.h  outline_pipeline.cpp  outline_pipeline.h  pipeline.cpp  pipeline.h  renderer.cpp  renderer.h  shader.cpp  shader.h  swapchain.cpp  swapchain.h  texture.cpp  texture.h  vertex.h  vma_impl.cpp  vulkan_context.cpp  vulkan_context.h  wallpaper_pipeline.cpp  wallpaper_pipeline.h
src/ui/: font.cpp  font.h  menu.cpp  menu.h
src/world/: biome.cpp  biome.h  block.cpp  block.h  block_reader.h  block_registry.cpp  block_registry.h  chunk.cpp  chunk.h  chunk_manager.cpp  chunk_manager.h  chunk_mesher.cpp  chunk_mesher.h  falling_blocks.cpp  falling_blocks.h  greedy_mesher.cpp  greedy_mesher.h  particle.cpp  particle.h  terrain_generator.cpp  terrain_generator.h
tools/: strip_comments.py
